# HoCoSys

./: .gitignore  CMakeLists.txt  README.md  q  sdkconfig  sdkconfig.old
components/I2C/: CMakeLists.txt  I2C.c
components/I2C/include/: I2C.h  I2C_if.h
components/PwrMngr/: CMakeLists.txt  PwrMngr.c
components/PwrMngr/include/: PwrMngr.h
components/app_timers/: CMakeLists.txt  app_timers.c
components/app_timers/include/: app_timer_if.h  app_timers.h
components/apptask/: CMakeLists.txt  apptask.c
components/apptask/include/: apptask.h  apptask_if.h
components/blufi/: BLE_SecServ.c  CMakeLists.txt  blufi.c  blufi_if.c  blufi_init.c  blufi_security.c
components/blufi/include/: BLE_SecServ.h  addr_from_stdin.h  blufi.h  blufi_if.h
components/consola/: CMakeLists.txt  commands.c  consola.c
components/consola/include/: consola.h  consola_if.h
components/init/: CMakeLists.txt  init.c
components/init/include/: init.h  init_if.h
components/leds/: CMakeLists.txt  leds.c
components/leds/include/: leds.h  leds_if.h
components/rtc/: CMakeLists.txt  rtc.c
components/rtc/include/: rtc.h  rtc_if.h
components/sense/: CMakeLists.txt  sense.c
components/sense/include/: sense.h  sense_if.h
main/: Kconfig.projbuild  idf_component.yml  main.c
